--- a/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/Derecho.html
+++ b/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/Derecho.html
@@ -6,7 +6,7 @@
  <title>Facultad de Derecho </title>
 </head>
 <style>
- body {background-color: blue; text-align: center}
+ body {background-color: blue; text-align: center; color: white;}
  h1 {font: size 4; text-decoration: underline; color:red}
  h2 {color: red}
  li{text-align: left}
@@ -17,8 +17,7 @@
  <a href="tp1-4.html"><h2>Página Principal</h2></a>
 </header>
 <body>
-<>
-La facultad de derecho posee 2 carreras vigentes (Abogacía y Procuración, Lic en Relaciones Internacionales).
+La Facultad de Derecho posee 2 carreras vigentes (Abogacía y Procuración, Lic en Relaciones Internacionales).
 </p>
 <a href="https://www.uch.edu.ar/carrera/abogacia">Página Oficial Facultad</a>
 <ul>
