--- a/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/informatica.html
+++ b/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/informatica.html
@@ -6,7 +6,7 @@
  <title>Facultad de Informática </title>
 </head>
 <style>
- body {background-color: blue; text-align: center}
+ body {background-color: blue; text-align: center; color: white}
  h1 {font-size:4;text-decoration: underline; color: aqua}
  h2 {color: aqua}
  li {text-align: left}
@@ -18,7 +18,7 @@
 </header>
 <body>
  <p>
-  La facultad de informática posee 2 carreras vigentes (Lic. en Sistemas de Información y Diseño Gráfico).
+  La Facultad de Informática posee 2 carreras vigentes (Lic. en Sistemas de Información y Diseño Gráfico).
  </p>
  <a href="https://www.uch.edu.ar/carrera/licenciatura-en-sistemas-de-informacion">Página Oficial Facultad</a>
  <ol>
