--- a/Prog 4/Tp 1/Punto 1-3/tp1.html
+++ b/Prog 4/Tp 1/Punto 1-3/tp1.html
@@ -15,6 +15,7 @@
   background-image: url('FONDO.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  color: white !important;
   }
 </style>
 <body>
