--- a/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/economicas.html
+++ b/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/economicas.html
@@ -7,7 +7,7 @@
 </head>
 <header>
  <style>
-  body {background-color: blue; text-align: center}
+  body {background-color: blue; text-align: center; color: white;}
   h1{color: chocolate; font-size: 4;text-decoration: underline}
   h2{color:chocolate}
   li{text-align: left}
@@ -18,7 +18,7 @@
 </header>
 <body>
 <p>
- La facultad de Ciencias Económicas posee 8 carreras vigentes (Lic. en Admin. de Empresas, Lic. en Comercio Internacional, Martillero Público, Contador Público, Corredor Público Inmobiliario, Lic. en Relaciones Humanas, Lic. en Relaciones Públicas y Lic. en Turismo).
+ La Facultad de Ciencias Económicas posee 8 carreras vigentes (Lic. en Admin. de Empresas, Lic. en Comercio Internacional, Martillero Público, Contador Público, Corredor Público Inmobiliario, Lic. en Relaciones Humanas, Lic. en Relaciones Públicas y Lic. en Turismo).
 </p>
 <a href="https://www.uch.edu.ar/carrera/licenciatura-en-administracion-de-empresas">Página Oficial Facultad</a>
 <ol>
