--- a/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/sociales.html
+++ b/Prog 4/Tp 1/Punto 4, 6 , 7 y 8/sociales.html
@@ -6,7 +6,7 @@
  <title>Facultad de Ciencias Sociales </title>
 </head>
 <style>
- body {background-color: blue; text-align: center}
+ body {background-color: blue; text-align: center; color: white;}
  h1 {color: violet; font: size 4; text-decoration: underline}
  h2 {color:violet}
  li{text-align: left}
@@ -18,7 +18,7 @@
 </header>
 <body>
  <p>
-  La facultad de Ciencias Sociales posee 4 carreras vigente (Ciclo de Profesorado para Profesionales, Centro Universitario de Idiomas, Lic. en Comunicación Digital y Profesorados Universitarios en Educación Primaria y en Educación Inicial).
+  La Facultad de Ciencias Sociales posee 4 carreras vigente (Ciclo de Profesorado para Profesionales, Centro Universitario de Idiomas, Lic. en Comunicación Digital y Profesorados Universitarios en Educación Primaria y en Educación Inicial).
  </p>
  <a href="https://www.uch.edu.ar/rectorados/centro-universitario-de-idiomas">Página Oficial Facultad</a>
  <ol>
