--- a/Prog 4/Tp 1/Punto 5/tp1-5.html
+++ b/Prog 4/Tp 1/Punto 5/tp1-5.html
@@ -23,21 +23,21 @@
   <a href="#eco"><li class="CienciasEconomicas">Ciencias Economicas</li></a>
  </ol>
  <section id="info" class="sec1">
- <div class="div3"><p>La facultad de informática posee 2 carreras vigentes (Lic. en Sistemas de Información y Diseño Gráfico).</p></div>
+ <div class="div3"><p>La Facultad de Informática posee 2 carreras vigentes (Lic. en Sistemas de Información y Diseño Gráfico).</p></div>
  <div class="div4"><ul>
   <li>Lic. en Sistemas de Información</li>
   <li>Diseño Gráfico</li>
  </ul></div>
 </section>
 <section id="dere" class="sec2">
- <div class="div1"><p>La facultad de derecho posee 2 carreras vigentes (Abogacía y Procuración, Lic en Relaciones Internacionales).</p></div>
+ <div class="div1"><p>La Facultad de Derecho posee 2 carreras vigentes (Abogacía y Procuración, Lic en Relaciones Internacionales).</p></div>
  <div class="div2"><ul>
   <li>Abogacía y Procuración</li>
   <li>Lic. en Relaciones Internacionales</li>
  </ul></div>
 </section>
 <section id="soc" class="sec3">
- <div class="div5"><p>La facultad de Ciencias Sociales posee 4 carreras vigente (Ciclo de Profesorado para Profesionales, Centro Universitario de Idiomas, Lic. en Comunicación Digital y Profesorados Universitarios en Educación Primaria y en Educación Inicial).</p></div>
+ <div class="div5"><p>La Facultad de Ciencias Sociales posee 4 carreras vigente (Ciclo de Profesorado para Profesionales, Centro Universitario de Idiomas, Lic. en Comunicación Digital y Profesorados Universitarios en Educación Primaria y en Educación Inicial).</p></div>
  <div class="div6"><ul>
   <li>Ciclo de Profesorado para Profesionales</li>
   <li>Centro Universitario de Idiomas</li>
@@ -47,7 +47,7 @@
 </section>
 <section id="eco" class="sec4">
   <div class="div7">
-    <p>La facultad de Ciencias Económicas posee 8 carreras vigentes (Lic. en Admin. de Empresas, Lic. en Comercio Internacional, Martillero Público, Contador Público, Corredor Público Inmobiliario, Lic. en Relaciones Humanas, Lic. en Relaciones Públicas y Lic. en Turismo).</p>
+    <p>La Facultad de Ciencias Económicas posee 8 carreras vigentes (Lic. en Admin. de Empresas, Lic. en Comercio Internacional, Martillero Público, Contador Público, Corredor Público Inmobiliario, Lic. en Relaciones Humanas, Lic. en Relaciones Públicas y Lic. en Turismo).</p>
   </div>
   <div class="div8">
     <ul>
