--- a/Prog 4/Tp 2/Home Page/Tp 2.html
+++ b/Prog 4/Tp 2/Home Page/Tp 2.html
@@ -15,6 +15,10 @@
  <img class="corner top-left" src="logo.png" alt="">
  <img class="corner top-right" src="logo.png" alt="">
 
- <h1>Universidad Champagnat</h1><b>
+ <h1><b><u>Universidad Champagnat</u></b></h1><b>
+  <h2><i>Facultad de Informática</i></h2>
+  <link rel="stylesheet" href="S_index.html">
+
+
 </body>
 </html>
