Lista con num romanos y links a home page

--- a/Prog 4/Tp 2/Home Page/S_index.html
+++ b/Prog 4/Tp 2/Home Page/S_index.html
@@ -11,6 +11,19 @@
   background-color: blue;
 
  }
+ roman-list{
+  list-style-type: upper-roman;
+ }
+h3{
+  text-align: center;
+}
+.Img{
+  position: absolute;
+ top:105%;
+ left: 10%;
+ transform: translate(-50%, -50%);
+ background-color: white;
+}
 </style>
 <body>
  <img class="corner top-left" src="logo.png" alt="">
@@ -18,59 +31,72 @@
 
  <h1><b><u>Universidad Champagnat</u></b></h1><b>
   <h2><i>Facultad de Informática</i></h2>
-  
+
+ <div class="Img">
+  <a href="Tp 2.html"><img src="home-button.jpg" alt="home-button"></a>
+  </div>
+ 
+
   <div class="Tabla">
    <table border="1">Plan de Estudios <th></th> 
     <tr>
      <td>
-      <ol>Base de Datos 1</ol>
-      <ol>Prog1</ol>
-      <ol>Prog2</ol>
-      <ol>Sistemas Operativos</ol>
-      <ol>Matematicas Basica</ol>
-      <ol>Algebra l</ol>
-      <ol>Arq de Computadoras</ol>
-      <ol>Introduccion a los Sistemas</ol>
-      <ol>Ing de Requisitos</ol>
-      <ol>Algoritmos</ol>
+      <ol type="i" class="roman-list">
+          <li>Base de Datos 1</li>
+          <li>Prog1</li>
+          <li>Prog2</li>
+          <li>Sistemas Operativos</li>
+          <li>Matematicas Basica</li>
+          <li>Algebra l</li>
+          <li>Arq de Computadoras</li>
+          <li>Introduccion a los Sistemas</li>
+          <li>Ing de Requisitos</li>
+          <li>Algoritmos</li>
+      </ol>
      </td>
      <td>
-      <ol>Base de Datos 2</ol>
-      <ol>Programacion 3</ol>
-      <ol>Programacion 4</ol>
-      <ol>Ing de Software 1</ol>
-      <ol>Ing de Sofrware 2</ol>
-      <ol>Algebra 2</ol>
-      <ol>Calculo 1</ol>
-      <ol>Redes</ol>
-      <ol>Sistemas Opertivos 2</ol>
+      <ol type="i" class="roman-list">
+          <li>Base de Datos 2</li>
+          <li>Programacion 3</li>
+          <li>Programacion 4</li>
+          <li>Ing de Software 1</li>
+          <li>Ing de Sofrware 2</li>
+          <li>Algebra 2</li>
+          <li>Calculo 1</li>
+          <li>Redes</li>
+          <li>Sistemas Opertivos 2</li>
+      </ol>
      </td>
     </tr>
     <tr>
      <td>
-      <ol>Programacion 5</ol>
-      <ol>Calculo 2</ol>
-      <ol>Redes 2</ol>
-      <ol>Algoritmos 2</ol>
-      <ol>Ing de Software 3</ol>
-      <ol>Programacion 6</ol>
-      <ol>Teoria de la Computacion</ol>
-      <ol>Arq de Computadoras 2</ol>
-      <ol>Bases de Datos 3</ol>
-      <ol>Aspectos Profesionales</ol>
-      <ol>Ingles</ol>
+      <ol type="i" class="roman-list">
+          <li>Programacion 5</li>
+          <li>Calculo 2</li>
+          <li>Redes 2</li>
+          <li>Algoritmos 2</li>
+          <li>Ing de Software 3</li>
+          <li>Programacion 6</li>
+          <li>Teoria de la Computacion</li>
+          <li>Arq de Computadoras 2</li>
+          <li>Bases de Datos 3</li>
+          <li>Aspectos Profesionales</li>
+          <li>Ingles</li>
+      </ol>
      </td>
      <td>
-      <ol>Probabilidad y estadistica</ol>
-      <ol>Teoria de Computacion 2</ol>
-      <ol>Auditoria</ol>
-      <ol>Calidad de software 1</ol>
-      <ol>Procesos de desarrollo de software</ol>
-      <ol>Teoria de la Computacion 3</ol>
-      <ol>Gestion de Proyectos</ol>
-      <ol>Arquitectura de Sistemas</ol>
-      <ol>Seguridad</ol>
-      <ol>Calidad de</ol>
+      <ol type="i" class="roman-list">
+          <li>Probabilidad y estadistica</li>
+          <li>Teoria de Computacion 2</li>
+          <li>Auditoria</li>
+          <li>Calidad de software 1</li>
+          <li>Procesos de desarrollo de software</li>
+          <li>Teoria de la Computacion 3</li>
+          <li>Gestion de Proyectos</li>
+          <li>Arquitectura de Sistemas</li>
+          <li>Seguridad</li>
+          <li>Calidad de Software</li>
+      </ol>
      </td>
     </tr>
    </table>  
