--- a/Prog 4/Tp 2/Home Page/Tp 2.html
+++ b/Prog 4/Tp 2/Home Page/Tp 2.html
@@ -10,6 +10,10 @@
  body{
   background-color: blue;
  }
+ .link-s{
+  color: white;
+  text-decoration: none;
+ }
 </style>
 <body>
  <img class="corner top-left" src="logo.png" alt="">
@@ -17,8 +21,8 @@
 
  <h1><b><u>Universidad Champagnat</u></b></h1><b>
   <h2><i>Facultad de Informática</i></h2>
-  <link rel="stylesheet" href="S_index.html">
-
+  <h1 class="link-s"><a href="S_index.html">Informática</a></h1>
+  
 
 </body>
 </html>
