--- a/Prog 4/Tp 2/Home Page/S_index.html
+++ b/Prog 4/Tp 2/Home Page/S_index.html
@@ -17,13 +17,7 @@
 h3{
   text-align: center;
 }
-.Img{
-  position: absolute;
- top:105%;
- left: 10%;
- transform: translate(-50%, -50%);
- background-color: white;
-}
+
 </style>
 <body>
  <img class="corner top-left" src="logo.png" alt="">
@@ -46,10 +40,10 @@ h3{
           <li>Prog1</li>
           <li>Prog2</li>
           <li>Sistemas Operativos</li>
-          <li>Matematicas Basica</li>
+          <li>Matemática Básica</li>
           <li>Algebra l</li>
           <li>Arq de Computadoras</li>
-          <li>Introduccion a los Sistemas</li>
+          <li>Introducción a los Sistemas</li>
           <li>Ing de Requisitos</li>
           <li>Algoritmos</li>
       </ol>
@@ -57,27 +51,27 @@ h3{
      <td>
       <ol type="i" class="roman-list">
           <li>Base de Datos 2</li>
-          <li>Programacion 3</li>
-          <li>Programacion 4</li>
+          <li>Programación 3</li>
+          <li>Programación 4</li>
           <li>Ing de Software 1</li>
-          <li>Ing de Sofrware 2</li>
+          <li>Ing de Software 2</li>
           <li>Algebra 2</li>
           <li>Calculo 1</li>
           <li>Redes</li>
-          <li>Sistemas Opertivos 2</li>
+          <li>Sistemas Operativos 2</li>
       </ol>
      </td>
     </tr>
     <tr>
      <td>
       <ol type="i" class="roman-list">
-          <li>Programacion 5</li>
+          <li>Programación 5</li>
           <li>Calculo 2</li>
           <li>Redes 2</li>
           <li>Algoritmos 2</li>
           <li>Ing de Software 3</li>
-          <li>Programacion 6</li>
-          <li>Teoria de la Computacion</li>
+          <li>Programación 6</li>
+          <li>Teoría de la Computación</li>
           <li>Arq de Computadoras 2</li>
           <li>Bases de Datos 3</li>
           <li>Aspectos Profesionales</li>
@@ -86,13 +80,13 @@ h3{
      </td>
      <td>
       <ol type="i" class="roman-list">
-          <li>Probabilidad y estadistica</li>
-          <li>Teoria de Computacion 2</li>
+          <li>Probabilidad y estadística</li>
+          <li>Teoría de Computación 2</li>
           <li>Auditoria</li>
           <li>Calidad de software 1</li>
           <li>Procesos de desarrollo de software</li>
-          <li>Teoria de la Computacion 3</li>
-          <li>Gestion de Proyectos</li>
+          <li>Teoría de la Computación 3</li>
+          <li>Gestión de Proyectos</li>
           <li>Arquitectura de Sistemas</li>
           <li>Seguridad</li>
           <li>Calidad de Software</li>
