--- a/Prog 4/Tp 2/Home Page/S_index.html
+++ b/Prog 4/Tp 2/Home Page/S_index.html
@@ -17,8 +17,10 @@
 h3{
   text-align: center;
 }
-
 </style>
+<header>
+        <a class="home-button" href="Tp 2.html"><img src="home-button.jpg" alt="home-button"></a>
+</header>
 <body>
  <img class="corner top-left" src="logo.png" alt="">
  <img class="corner top-right" src="logo.png" alt="">
@@ -26,75 +28,72 @@ h3{
  <h1><b><u>Universidad Champagnat</u></b></h1><b>
   <h2><i>Facultad de Informática</i></h2>
 
- <div class="Img">
-  <a href="Tp 2.html"><img src="home-button.jpg" alt="home-button"></a>
-  </div>
- 
 
-  <div class="Tabla">
-   <table border="1">Plan de Estudios <th></th> 
-    <tr>
-     <td>
-      <ol type="i" class="roman-list">
-          <li>Base de Datos 1</li>
-          <li>Prog1</li>
-          <li>Prog2</li>
-          <li>Sistemas Operativos</li>
-          <li>Matemática Básica</li>
-          <li>Algebra l</li>
-          <li>Arq de Computadoras</li>
-          <li>Introducción a los Sistemas</li>
-          <li>Ing de Requisitos</li>
-          <li>Algoritmos</li>
-      </ol>
-     </td>
-     <td>
-      <ol type="i" class="roman-list">
-          <li>Base de Datos 2</li>
-          <li>Programación 3</li>
-          <li>Programación 4</li>
-          <li>Ing de Software 1</li>
-          <li>Ing de Software 2</li>
-          <li>Algebra 2</li>
-          <li>Calculo 1</li>
-          <li>Redes</li>
-          <li>Sistemas Operativos 2</li>
-      </ol>
-     </td>
-    </tr>
-    <tr>
-     <td>
-      <ol type="i" class="roman-list">
-          <li>Programación 5</li>
-          <li>Calculo 2</li>
-          <li>Redes 2</li>
-          <li>Algoritmos 2</li>
-          <li>Ing de Software 3</li>
-          <li>Programación 6</li>
-          <li>Teoría de la Computación</li>
-          <li>Arq de Computadoras 2</li>
-          <li>Bases de Datos 3</li>
-          <li>Aspectos Profesionales</li>
-          <li>Ingles</li>
-      </ol>
-     </td>
-     <td>
-      <ol type="i" class="roman-list">
-          <li>Probabilidad y estadística</li>
-          <li>Teoría de Computación 2</li>
-          <li>Auditoria</li>
-          <li>Calidad de software 1</li>
-          <li>Procesos de desarrollo de software</li>
-          <li>Teoría de la Computación 3</li>
-          <li>Gestión de Proyectos</li>
-          <li>Arquitectura de Sistemas</li>
-          <li>Seguridad</li>
-          <li>Calidad de Software</li>
-      </ol>
-     </td>
-    </tr>
-   </table>  
-  </div>
- 
+<section class="section tabla">
+        <div class="Tabla">
+         <table border="1">Plan de Estudios <th></th> 
+          <tr>
+           <td>
+            <ol type="i" class="roman-list">
+                <li>Base de Datos 1</li>
+                <li>Programación 1</li>
+                <li>Programación 2</li>
+                <li>Sistemas Operativos</li>
+                <li>Matemática Básica</li>
+                <li>Algebra l</li>
+                <li>Arq de Computadoras</li>
+                <li>Introducción a los Sistemas</li>
+                <li>Ing de Requisitos</li>
+                <li>Algoritmos</li>
+            </ol>
+           </td>
+           <td>
+            <ol type="i" class="roman-list">
+                <li>Base de Datos 2</li>
+                <li>Programación 3</li>
+                <li>Programación 4</li>
+                <li>Ing de Software 1</li>
+                <li>Ing de Software 2</li>
+                <li>Algebra 2</li>
+                <li>Calculo 1</li>
+                <li>Redes</li>
+                <li>Sistemas Operativos 2</li>
+            </ol>
+           </td>
+          </tr>
+          <tr>
+           <td>
+            <ol type="i" class="roman-list">
+                <li>Programación 5</li>
+                <li>Calculo 2</li>
+                <li>Redes 2</li>
+                <li>Algoritmos 2</li>
+                <li>Ing de Software 3</li>
+                <li>Programación 6</li>
+                <li>Teoría de la Computación</li>
+                <li>Arq de Computadoras 2</li>
+                <li>Bases de Datos 3</li>
+                <li>Aspectos Profesionales</li>
+                <li>Ingles</li>
+            </ol>
+           </td>
+           <td>
+            <ol type="i" class="roman-list">
+                <li>Probabilidad y estadística</li>
+                <li>Teoría de Computación 2</li>
+                <li>Auditoria</li>
+                <li>Calidad de software 1</li>
+                <li>Procesos de desarrollo de software</li>
+                <li>Teoría de la Computación 3</li>
+                <li>Gestión de Proyectos</li>
+                <li>Arquitectura de Sistemas</li>
+                <li>Seguridad</li>
+                <li>Calidad de Software</li>
+            </ol>
+           </td>
+          </tr>
+         </table>  
+        </div>
+</section>
 </body>
 </html>
