Home Button centrado, link a plan de estudios y tabla mejorada esteticamente

--- a/Prog 4/Tp 2/Home Page/S_index.html
+++ b/Prog 4/Tp 2/Home Page/S_index.html
@@ -14,13 +14,17 @@
  roman-list{
   list-style-type: upper-roman;
  }
-h3{
-  text-align: center;
+h1{
+    font-size: 35px;
+}
+h2{
+    font-size: 25px;
 }
 </style>
 <header>
         <a class="home-button" href="Tp 2.html"><img src="home-button.jpg" alt="home-button"></a>
 </header>
+
 <body>
  <img class="corner top-left" src="logo.png" alt="">
  <img class="corner top-right" src="logo.png" alt="">
@@ -94,6 +98,9 @@ h3{
           </tr>
          </table>  
         </div>
+</section>
+<section class="splan">
+    <a class="Plan" href="https://www.uch.edu.ar/docs/Sistemas_de_Informacion.pdf">Plan de Estudios 2015</a>
 </section>
 </body>
 </html>
