--- a/Prog 4/Tp 2/Home Page/Tp 2.html
+++ b/Prog 4/Tp 2/Home Page/Tp 2.html
@@ -9,20 +9,40 @@
 <style>
  body{
   background-color: blue;
+  
  }
  .link-s{
   color: white;
   text-decoration: none;
+  text-align: center;
  }
+section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 300px;
+  margin-bottom: 300px;
+}
+h1{
+  font-size: 30px;
+}
+h2{
+  font-size: 30px;
+}
+
+
 </style>
 <body>
  <img class="corner top-left" src="logo.png" alt="">
  <img class="corner top-right" src="logo.png" alt="">
 
- <h1><b><u>Universidad Champagnat</u></b></h1><b>
-  <h2><i>Facultad de Informática</i></h2>
-  <h1 class="link-s"><a href="S_index.html">Informática</a></h1>
-  
+  <section>
+    <div>
+          <h1><b><u>Universidad Champagnat</u></b></h1><b>
+          <h2><i>Facultad de Informática</i></h2>
+          <h1 class="link-s"><a href="S_index.html">Informática</a></h1>
+    </div>
+  </section>
 
 </body>
 </html>
