Div con blur en titulus, sections de las materias y div link plan de estudios

--- a/Prog 4/Tp 2/Home Page/Tp 2.html
+++ b/Prog 4/Tp 2/Home Page/Tp 2.html
@@ -11,7 +11,7 @@
   background-color: blue;
   
  }
- .link-s{
+ a{
   color: white;
   text-decoration: none;
   text-align: center;
@@ -37,7 +37,7 @@ h2{
  <img class="corner top-right" src="logo.png" alt="">
 
   <section>
-    <div>
+    <div class="Div-titulos">
           <h1><b><u>Universidad Champagnat</u></b></h1><b>
           <h2><i>Facultad de Informática</i></h2>
           <h1 class="link-s"><a href="S_index.html">Informática</a></h1>
