--- a/Prog 4/Tp 2/Home Page/S_index.html
+++ b/Prog 4/Tp 2/Home Page/S_index.html
@@ -11,9 +11,7 @@
   background-color: blue;
 
  }
- roman-list{
-  list-style-type: upper-roman;
- }
+
 h1{
     font-size: 35px;
 }
@@ -99,8 +97,33 @@ h2{
          </table>  
         </div>
 </section>
-<section class="splan">
-    <a class="Plan" href="https://www.uch.edu.ar/docs/Sistemas_de_Informacion.pdf">Plan de Estudios 2015</a>
+<br>
+<section class="S-plan">
+    <div class="Div-plan">
+        <a class="Plan" href="https://www.uch.edu.ar/docs/Sistemas_de_Informacion.pdf">Plan de Estudios 2015</a>
+    </div>
+
+</section>
+<section class="S-materia1">
+    <br>
+    <div class="Div-materia">
+        <h1 class="materia">Base de Datos</h1>
+        <p>La programación es la habilidad de dar instrucciones a una computadora para que realice tareas específicas. Se logra a través de lenguajes de programación como Python o Java. Los programadores construyen todo tipo de software, desde aplicaciones móviles hasta sistemas operativos, resolviendo problemas y creando soluciones digitales.</p>
+    </div>
+</section>
+    <br>
+<section class="S-materia2">
+    <div class="Div-materia">
+        <h1 class="materia">Programación</h1>
+        <p>Las bases de datos son como bibliotecas digitales organizadas, donde se almacena y gestiona grandes cantidades de información de manera estructurada. Imagina una base de datos como una hoja de cálculo gigante, pero con reglas muy específicas para encontrar y actualizar la información. El estudio de las bases de datos te enseña cómo diseñar, construir y administrar estas bibliotecas de datos.</p>
+    </div>
+</section>
+    <br>
+<section class="S-materia3">
+    <div class="Div-materia">
+        <h1 class="materia">Algebra</h1>
+        <p>El álgebra lineal es una rama de las matemáticas que se enfoca en el estudio de vectores, matrices y sistemas de ecuaciones lineales. Es como una herramienta matemática fundamental para representar y manipular datos, especialmente en el mundo de la ciencia de datos y el machine learning. El álgebra lineal te ayuda a entender cómo resolver problemas complejos y a encontrar patrones en grandes conjuntos de datos.</p>
+    </div>
 </section>
 </body>
 </html>
